@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Fixed several memory leaks on some return types and complex type
+    arguments (gh#190, gh#191)
 
 0.97_04   2019-10-05 12:31:32 -0600
   - pointer is no longer an alias for opaque with api => 1 (gh#189)
